src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Responsible_manager__c</fullName>
        <label>Responsible manager</label>
        <picklist>
            <picklistValues>
                <fullName>Yaroslav Lazoryk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andrii Boiko</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Serhii Riabtsev</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ganna Chos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sagar Pareek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gaurav Agarwal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kanika Dua</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Krishnadas Ramaswamy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paweł Marszałek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amit Jindal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jon Chevalier</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Responsible_manager_s_email__c</fullName>
        <formula>IF( INCLUDES(Responsible_manager__c , &quot;Andrii Boiko&quot;), &quot;andrii.boiko@aurea.com; &quot;,&quot;&quot;) 
&amp;
IF( INCLUDES(Responsible_manager__c , &quot;Ganna Chos&quot;) , &quot;ganna.chos@aurea.com; &quot;, &quot;&quot;)
&amp;
IF( INCLUDES(Responsible_manager__c , &quot;Yaroslav Lazoryk&quot;), &quot;yaroslav.lazoryk@aurea.com; &quot;, &quot;&quot;)  
&amp; 
IF( INCLUDES(Responsible_manager__c , &quot;Jon Chevalier&quot;), &quot;jon.chevalier@aurea.com; &quot;, &quot;&quot;)
&amp; 
IF( INCLUDES(Responsible_manager__c , &quot;Sagar Pareek&quot;), &quot;sagar.pareek@aurea.com; &quot;, &quot;&quot;)
&amp; 
IF( INCLUDES(Responsible_manager__c , &quot;Paweł Marszałek&quot;), &quot;pawel.marszalek@aurea.com; &quot;, &quot;&quot;)
&amp; 
IF( INCLUDES(Responsible_manager__c , &quot;Krishnadas Ramaswamy&quot;), &quot;krishnadas.ramaswamy@aurea.com; &quot;, &quot;&quot;)
&amp; 
IF( INCLUDES(Responsible_manager__c , &quot;Gaurav Agarwal&quot;), &quot;gaurav.agarwal.1@aurea.com; &quot;, &quot;&quot;)
&amp; 
IF( INCLUDES(Responsible_manager__c , &quot;Kanika Dua&quot;), &quot;kanika.dua@aurea.com; &quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Responsible manager&apos;s email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Browser__c</fullName>
        <label>Browser</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Device__c</fullName>
        <label>Device</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_First_Click_Campaign__c</fullName>
        <label>First Click Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_First_Click_Channel__c</fullName>
        <label>First Click Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_First_Click_Content__c</fullName>
        <label>First Click Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_First_Click_Landing_Page__c</fullName>
        <label>First Click Landing Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_First_Click_Medium__c</fullName>
        <label>First Click Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_First_Click_Referrer__c</fullName>
        <label>First Click Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_First_Click_Source__c</fullName>
        <label>First Click Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_First_Click_Term__c</fullName>
        <label>First Click Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Google_Analytics_Client_ID__c</fullName>
        <label>Google Analytics Client ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Google_Analytics_Link__c</fullName>
        <formula>HYPERLINK( (&quot;https://analytics.google.com/analytics/web/#report/visitors-user-activity/a72840801w110617423p115383936/%3F_r.userId%3D&quot; &amp; gaconnector_Google_Analytics_Client_ID__c &amp; &quot;%26_r.userListReportStates%3D%26_r.userListReportId%3Dvisitors-legacy-user-id/&quot;), &quot;Open in Google Analytics&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Google Analytics Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_IP_Address__c</fullName>
        <label>IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Last_Click_Campaign__c</fullName>
        <label>Last Click Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Last_Click_Channel__c</fullName>
        <label>Last Click Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Last_Click_Content__c</fullName>
        <label>Last Click Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Last_Click_Landing_Page__c</fullName>
        <label>Last Click Landing Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Last_Click_Medium__c</fullName>
        <label>Last Click Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Last_Click_Referrer__c</fullName>
        <label>Last Click Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Last_Click_Source__c</fullName>
        <label>Last Click Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Last_Click_Term__c</fullName>
        <label>Last Click Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Latitude_from_IP__c</fullName>
        <label>Latitude (from IP)</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gaconnector_Location_approx__c</fullName>
        <formula>HYPERLINK(&quot;https://maps.google.com/maps?q=loc:&quot; &amp; TEXT( gaconnector_Latitude_from_IP__c ) &amp; &quot;,&quot; &amp; TEXT( gaconnector_Longitude__c ), &quot;Open in Google Maps&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location (approx.)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Longitude__c</fullName>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gaconnector_Number_of_Website_Visits__c</fullName>
        <label>Number of Website Visits</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Operating_System__c</fullName>
        <label>Operating System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Pages_visited__c</fullName>
        <label>Pages visited</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>gaconnector_Time_Spent_on_Website__c</fullName>
        <label>Time Spent on Website</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gaconnector_Time_Spent_on_Website_formul__c</fullName>
        <formula>TEXT(ROUND(gaconnector_Time_Spent_on_Website__c / 60000,0)) &amp; &quot;:&quot; &amp; 
TEXT(MOD(ROUND(	gaconnector_Time_Spent_on_Website__c / 1000,0), 60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Spent on Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gaconnector_Time_Zone__c</fullName>
        <label>Time Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lntcms__EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lntcms__Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>GC1040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC1060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC1020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time_24_Short__c</fullName>
        <description>Shows the current local time (without date) of the Contact/Account associated with the Case in 24-hr format.</description>
        <formula>IF(Contact.tz__Timezone__c != null, Contact.tz__Local_Time_24_Short__c, Account.tz__Local_Time_24_Short__c)</formula>
        <inlineHelpText>Shows the local time (without date) of the Contact/Account associated with the Case in 24-hr format.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time_24__c</fullName>
        <description>Shows the current local time of the Contact/Account associated with the Case in 24-hr format.</description>
        <formula>IF(Contact.tz__Timezone__c != null, Contact.tz__Local_Time_24__c, Account.tz__Local_Time_24__c)</formula>
        <inlineHelpText>Shows the local time of the Contact/Account associated with the Case in 24-hr format.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time_Short__c</fullName>
        <description>Shows the current local time (without date) of the Contact/Account associated with the Case.</description>
        <formula>IF(Contact.tz__Timezone__c != null, Contact.tz__Local_Time_Short__c, Account.tz__Local_Time_Short__c)</formula>
        <inlineHelpText>Shows the local time (without date) of the Contact/Account associated with the Case.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time__c</fullName>
        <description>Shows the current local time of the Contact/Account associated with the Case.</description>
        <formula>IF(Contact.tz__Timezone__c != null, Contact.tz__Local_Time__c, Account.tz__Local_Time__c)</formula>
        <inlineHelpText>Shows the local time of the Contact/Account associated with the Case.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone_Formula__c</fullName>
        <description>Current timezone abbreviation (PST, EST,etc..) of the Contact/Account associated with the Case.</description>
        <formula>IF(Contact.tz__Timezone__c != null, Contact.tz__Timezone__c, Account.tz__Timezone__c)</formula>
        <inlineHelpText>Timezone abbreviation (PST, EST,etc..) of the Contact/Account associated with the Case.</inlineHelpText>
        <label>Timezone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone_Full__c</fullName>
        <description>Full timezone name of the Contact/Account associated with the Case.</description>
        <formula>IF(Contact.tz__Timezone__c != null, Contact.tz__Timezone_Full__c, Account.tz__Timezone_Full__c)</formula>
        <inlineHelpText>Full timezone name of the Contact/Account associated with the Case.</inlineHelpText>
        <label>Timezone (Full)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__UTC_Offset_Formula__c</fullName>
        <description>Shows the current UTC timezone offset of the Contact/Account associated with the Case.</description>
        <formula>IF(Contact.tz__Timezone__c != null, Contact.tz__UTF_Offset__c, Account.tz__UTF_Offset__c)</formula>
        <inlineHelpText>Shows the UTC timezone offset of the Contact/Account associated with the Case.</inlineHelpText>
        <label>UTC Offset</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Responsible_manager__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.EMAIL</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>